# atomref-proatoms

./: .gitattributes  .gitignore  AGENTS.md  AI_NOTE.md  CHANGELOG.md  CITATION.cff  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
data/: README.md  profile_datasets.yaml
data/basis_sets/: LICENSE-BSE-BSD-3-Clause.txt  README.md  basis_set_summary.json
data/multiwfn_artifacts/: README.md  manifest.json
data/profiles/: README.md
data/qa/: README.md  metadata.json  qa_report.md  qa_summary.csv
data/radii/: README.md
data/states/: README.md
docs/: ai_note.md  api.md  basis_sets.md  conclusions.md  data.md  data_layer_report.md  data_layout.md  discussion.md  index.md  inputs.md  introduction.md  license.md  methods.md  multiwfn_interop.md  other.md  results.md  state_curation.md  state_policy.md  theory.md  workflow.md
docs/generator/: cli.md  examples.md  howto.md  index.md  scripting.md
docs/notebooks/: README.md  multiwfn_wfn_plane_validation.ipynb  proatomic_profiles.ipynb  proatomic_profiles_v1.ipynb  spherical_vs_post_average_demo.ipynb
docs/tables/: basis_sensitivity_by_charge.md  basis_sensitivity_by_role.md  basis_sensitivity_outliers.md  basis_sensitivity_summary.md  dataset_inventory.md  generated_rows_by_charge.md  generated_rows_by_role.md  linear_dependency_summary.md  primary_basis_comparison_by_charge.md  primary_basis_comparison_summary.md  primary_basis_metric_distributions.md  primary_basis_outliers.md  qa_validation_summary.md  state_counts_by_charge.md  state_counts_by_role.md
examples/: README.md
examples/01_cli_neutral_rad_wfn_bse/: README.md  run.sh
examples/02_cli_stockholder_local_basis/: README.md  run.sh
examples/03_python_custom_state_pipeline/: README.md  custom_state_pipeline.ipynb
report/: README.md
scripts/: README.md  build_atom_states.py  build_data_layer_report.py  build_dataset_index.py  build_release_artifacts.py  build_report.py  check_basis_bundles.py  check_basis_comparisons.py  check_basis_sensitivity.py  check_dataset.py  check_multiwfn_artifacts.py  check_pilot_outputs.py  check_profile_artifacts.py  check_profiles.py  check_release_package.py  check_states.py  compare_release_packages.py  compute_wavefunctions.py  export_multiwfn_artifacts.py  export_profiles.py  extract_profiles.py  package_dataset_outputs.py  package_pilot_outputs.py  prepare_docs.py  run_dataset.py  run_dataset_build.py  run_pilots.py  smoke_installed_wheel.py  summarize_dataset.py
src/atomref_proatoms/: __init__.py  artifacts.py  basis.py  build_plan.py  dataset_index.py  dataset_summary.py  datasets.py  grids.py  paths.py  pilot_outputs.py  pilot_package.py  pilots.py  profile_checks.py  profiles.py  qa.py  release_compare.py  release_package.py  report.py  scf.py  schemas.py  spherical_uks.py  states.py
tests/: test_artifacts.py  test_basis_bundles.py  test_build_plan.py  test_check_states_script.py  test_dataset_ids.py  test_grids.py  test_package_layout.py  test_profile_metadata_schema.py  test_qa.py  test_radius_interpolation.py  test_scf_lazy.py  test_spherical_uks_core.py  test_spherical_uks_placeholders.py  test_states_current_data.py
tests/cli/: test_generate_dry_run.py
tests/dataio/: test_basis_bundles.py  test_dataset_ids.py  test_resources.py
tests/engines/: test_scf_lazy.py  test_spherical_scf_core.py  test_spherical_scf_placeholders.py  test_spherical_scf_runtime.py  test_spherical_uks_core.py
tests/examples/: test_example_outputs.py
tests/exporters/: test_multiwfn_artifacts.py  test_multiwfn_rad.py  test_proaim_wfn.py
tests/generator/: test_basis_resolver.py  test_execution_runtime.py  test_execution_wfn.py  test_methods.py  test_planner.py  test_state_selection.py  test_workspace.py
tests/package/: test_package_layout.py  test_pyproject_extras.py  test_release_metadata.py
tests/unit/: test_qa.py  (+16 more)
(+1260 files in other folders)
