[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atomref-proatoms"
version = "0.1.0.dev0"
description = "Generator/data repository for atomref proatomic radial density profiles."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "DeloneCommons" }
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
]
dev = [
  "pytest>=7",
  "ruff>=0.6",
]
generator = [
  "pyscf>=2.6",
]
audit = [
  "basis-set-exchange",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "slow: slow tests that may require quantum-chemistry dependencies",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []
