[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atomref-proatoms"
version = "2.0.0"
description = "Reproducible spherical proatomic radial density datasets and generator."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [
  { name = "Ivan Yu. Chernyshov", email = 'ivan.chernyshoff@gmail.com' }
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "PyYAML>=6.0",
]

[project.scripts]
atomref-proatoms = "atomref_proatoms.cli.main:main"

[project.optional-dependencies]
test = [
  "pytest>=7",
]
dev = [
  "pytest>=7",
  "ruff>=0.6",
]
generator = [
  "pyscf==2.13.1",
  "basis-set-exchange",
]
audit = [
  "basis-set-exchange",
]
docs = [
  "jupyter>=1",
  "pandas>=2",
  "matplotlib>=3.8",
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5",
  "mkdocs-jupyter>=0.24",
]
all = [
  "pytest>=7",
  "ruff>=0.6",
  "pyscf==2.13.1",
  "basis-set-exchange",
  "jupyter>=1",
  "pandas>=2",
  "matplotlib>=3.8",
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5",
  "mkdocs-jupyter>=0.24",
]

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
"atomref_proatoms.resources" = [
  "states/*.json",
  "presets/*.yaml",
  "grids/*.csv",
  "schemas/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "slow: slow tests that may require quantum-chemistry dependencies",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []
